[gd_scene load_steps=9 format=3 uid="uid://cgg507s0d4uvi"]

[ext_resource type="Script" path="res://RaceIngame.gd" id="1_sr2yh"]
[ext_resource type="PackedScene" uid="uid://bf023ng2nrvk2" path="res://UniversalCanvas.tscn" id="2_1u75j"]
[ext_resource type="Script" path="res://RaceEventListener.gd" id="2_c5cfr"]
[ext_resource type="Script" path="res://RaceInputHandler.gd" id="3_4be1a"]
[ext_resource type="PackedScene" uid="uid://d0e2cc72nlueq" path="res://PauseMenu.tscn" id="3_uan4p"]
[ext_resource type="PackedScene" uid="uid://wgcae8ei5xn5" path="res://Menu/LeaderboardUI.tscn" id="3_xvyrp"]
[ext_resource type="PackedScene" uid="uid://dgurpytbg7dx6" path="res://Sounds/IngameSFX.tscn" id="5_tnrfk"]
[ext_resource type="Script" path="res://RaceStateMachine.gd" id="6_nt5ye"]

[node name="RaceIngame" type="Node3D"]
script = ExtResource("1_sr2yh")

[node name="UniversalCanvas" parent="." instance=ExtResource("2_1u75j")]
unique_name_in_owner = true

[node name="LeaderboardUI" parent="UniversalCanvas" instance=ExtResource("3_xvyrp")]
unique_name_in_owner = true

[node name="PauseMenu" parent="UniversalCanvas" instance=ExtResource("3_uan4p")]
unique_name_in_owner = true

[node name="HorizontalSplit" type="VBoxContainer" parent="."]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3

[node name="VerticalSplitTop" type="HBoxContainer" parent="HorizontalSplit"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VerticalSplitBottom" type="HBoxContainer" parent="HorizontalSplit"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="IngameSFX" parent="." instance=ExtResource("5_tnrfk")]
unique_name_in_owner = true

[node name="Players" type="Node3D" parent="."]
unique_name_in_owner = true

[node name="RaceInputHandler" type="Node3D" parent="."]
unique_name_in_owner = true
script = ExtResource("3_4be1a")

[node name="RaceStateMachine" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("6_nt5ye")

[node name="RaceEventListener" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_c5cfr")
